# gemm-kernel

./: .gitignore  CMakeLists.txt  README.md  build.sh  latency.cpp  main.cpp  throughput.cpp
include/common/: utils.h
include/kernel/: m4n24.h
include/microbench/: latency.h  throughput.h
src/: utils.cpp
src/common/: utils.cpp
src/kernel/: M4N24.S
src/microbench/: latency.S  throughput.S
